--- a/system-ui/src/main/webapp/index.html
+++ b/system-ui/src/main/webapp/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
-</html>
+<lift:surround with="body" at="body">
+    <h1>Welcome</h1>
+</lift:surround>
