Issue #8 A user can now login to the client UI.

--- a/system-ui/src/main/webapp/login.html
+++ b/system-ui/src/main/webapp/login.html
@@ -2,9 +2,12 @@
     <section>
         <section class="col-lg-offset-3 col-lg-6 panel panel-default">
             <section class="panel-body">
-                <form>
+                <form action="/login" method="post">
                     <section class="row">
                         <h1 class="text-center">Login to Heystk</h1>
+                        <section class="lift:Login.login text-danger text-center">
+                            Invalid username/password
+                        </section>
                     </section>
                     <section class="row">
                         <section class="col-lg-6 text-right"><label for="username">Username</label></section>
