--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="heystk">
     <head>
         <meta charset="UTF-8">
         <script src="/static/js/lib/angularjs/angular.js"></script>
         <script src="/static/js/lib/bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
         <script src="/static/js/lib/jquery/jquery.js"></script>
+        <script src="/static/js/main.js"></script>
         <link rel="stylesheet" href="/static/css/lib/bootstrap/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/static/css/lib/bootstrap/bootstrap.min.css">
         <title>Heystk</title>
         <meta name="author" content="Joshua Backfield">
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default" ng-controller="NavigationController">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -21,7 +22,19 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Login</a></li>
+                        <lift:testCond.loggedIn>
+                            <li class="dropdown" uib-dropdown>
+                                <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
+                                <ul class="dropdown-menu" uib-dropdown-menu>
+                                    <li><a href="/profile">Profile</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="/logout">Logout</a></li>
+                                </ul>
+                            </li>
+                        </lift:testCond.loggedIn>
+                        <lift:testCond.loggedOut>
+                            <li><a href="/login">Login</a></li>
+                        </lift:testCond.loggedOut>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
