--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -24,6 +24,12 @@
                     <ul class="nav navbar-nav navbar-right">
                         <lift:testCond.loggedIn>
                             <li class="dropdown" uib-dropdown>
+                                <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+                                <ul class="dropdown-menu" uib-dropdown-menu>
+                                    <li><a href="/admin-users">Users</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown" uib-dropdown>
                                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
                                 <ul class="dropdown-menu" uib-dropdown-menu>
                                     <li><a href="/profile">Profile</a></li>
