Issue #9 Created the user list, also a button to start creating a new user.

--- a/system-ui/src/main/webapp/index.html
+++ b/system-ui/src/main/webapp/index.html
@@ -1,3 +1,8 @@
 <lift:surround with="body" at="body">
-    <h1>Welcome</h1>
+    <head_merge>
+        <title>heystk</title>
+    </head_merge>
+    <section class="container">
+        <h1>Welcome</h1>
+    </section>
 </lift:surround>
