--- a/system-ui/src/main/webapp/login.html
+++ b/system-ui/src/main/webapp/login.html
@@ -1,4 +1,7 @@
 <lift:surround with="body" at="body">
+    <head_merge>
+        <title>heystk - Login</title>
+    </head_merge>
     <section>
         <section class="col-lg-offset-3 col-lg-6 panel panel-default">
             <section class="panel-body">
