--- a/system-ui/src/main/webapp/logout.html
+++ b/system-ui/src/main/webapp/logout.html
@@ -1,4 +1,7 @@
 <lift:surround with="body" at="body">
+    <head_merge>
+        <title>heystk - Login</title>
+    </head_merge>
     <h1>Logging out...</h1>
     <section class="lift:Login.logout"></section>
 </lift:surround>
