--- a/system-ui/src/main/webapp/admin-users.html
+++ b/system-ui/src/main/webapp/admin-users.html
@@ -5,17 +5,21 @@
         <script class="lift:UserSnippet.getUserList?callback=loadUsers"></script>
         <script class="lift:UserSnippet.checkUserNameExists?callback=checkUserNameExistsCb"></script>
         <script class="lift:UserSnippet.createUser?callback=userCreated"></script>
+        <script class="lift:UserSnippet.deleteUsers?callback=getUserList"></script>
     </head_merge>
     <section class="container" ng-controller="UserAdminController">
-        <input type="button" class="btn btn-primary" value="New User" ng-click="newUser()" />
+        <input type="button" class="btn btn-primary" value="New User" ng-show="canCreateUser()" ng-click="newUser()" />
+        <input type="button" class="btn btn-danger" value="Delete" ng-show="canDeleteUsers()" ng-click="deleteUsers()" ng-disabled="!userSelected()"/>
         <table class="table table-bordered">
             <tr>
+                <th></th>
                 <th>Username</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Created</th>
             </tr>
             <tr ng-repeat="user in users">
+                <td><input type="checkbox" ng-enabled="canDeleteUsers()" ng-model="user.selected" /></td>
                 <td>{{user.username}}</td>
                 <td>{{user.firstName}}</td>
                 <td>{{user.lastName}}</td>
