--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -22,10 +22,16 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <lift:testCond.loggedIn>
+                            <li class="dropdown" uib-dropdown>
+                                <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">System <span class="caret"></span></a>
+                                <ul class="dropdown-menu" uib-dropdown-menu>
+                                    <li><a href="/agents">Agents</a></li>
+                                </ul>
+                            </li>
                             <li class="lift:userSnippet.ifAdminMenuAvailable dropdown" uib-dropdown>
                                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
                                 <ul class="dropdown-menu" uib-dropdown-menu>
-                                    <li class="lift:UserSnippet.ifCanViewUsers"><a href="/admin-users">Users</a></li>
+                                    <li class="lift:UserSnippet.ifCanViewUsers"><a href="/users">Users</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown" uib-dropdown>
