Issue #11 User can now create a FileReader agent.

--- a/system-ui/src/main/webapp/agents.html
+++ b/system-ui/src/main/webapp/agents.html
@@ -3,21 +3,25 @@
         <title>heystk - Agents</title>
         <script src="/static/js/agents.js"></script>
         <script class="lift:AgentSnippet.getAgentList?callback=loadAgents"></script>
+        <script class="lift:AgentSnippet.createAgent?callback=agentCreated"></script>
     </head_merge>
     <section class="container">
         <section class="container" ng-controller="AgentsController">
+            <input type="button" class="btn btn-primary" value="New Agent" ng-show="canCreateAgent()" ng-click="createAgent()" />
             <table class="table table-bordered">
                 <tr>
                     <th></th>
+                    <th>ID</th>
                     <th>Name</th>
+                    <th>Type</th>
                     <th>Created</th>
-                    <th>Agent Key</th>
                 </tr>
                 <tr ng-repeat="agent in agents">
                     <td><input type="checkbox" ng-model="agent.selected" /></td>
+                    <td>{{agent.id}}</td>
                     <td>{{agent.name}}</td>
+                    <td>{{agent.type}}</td>
                     <td>{{agent.created | date :'MM/dd/yyyy h:mma'}}</td>
-                    <td><textarea readonly="readonly">{{agent.authentication}}</textarea></td>
                 </tr>
             </table>
         </section>
