Issue #13 Added functionality so that a user can now download their configuration.

--- a/system-ui/src/main/webapp/agents.html
+++ b/system-ui/src/main/webapp/agents.html
@@ -5,6 +5,7 @@
         <script class="lift:AgentSnippet.getAgentList?callback=loadAgents"></script>
         <script class="lift:AgentSnippet.createAgent?callback=agentCreated"></script>
         <script class="lift:AgentSnippet.deleteAgents?callback=getAgentList"></script>
+        <script class="lift:AgentSnippet.generateConfig?callback=showAgentConfig"></script>
     </head_merge>
     <section class="container">
         <section class="container" ng-controller="AgentsController">
@@ -17,6 +18,7 @@
                     <th>Name</th>
                     <th>Type</th>
                     <th>Created</th>
+                    <th>Config</th>
                 </tr>
                 <tr ng-repeat="agent in agents">
                     <td><input type="checkbox" ng-model="agent.selected" /></td>
@@ -24,6 +26,7 @@
                     <td>{{agent.name}}</td>
                     <td>{{agent.type}}</td>
                     <td>{{agent.created | date :'MM/dd/yyyy h:mma'}}</td>
+                    <td><input type="button" class="btn btn-primary" value="Generate" ng-click="generateConfig(agent.id)" /></td>
                 </tr>
             </table>
         </section>
