--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -26,6 +26,7 @@
                                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">System <span class="caret"></span></a>
                                 <ul class="dropdown-menu" uib-dropdown-menu>
                                     <li><a href="/agents">Agents</a></li>
+                                    <li><a href="/engine-apis">Engine API</a></li>
                                 </ul>
                             </li>
                             <li class="lift:userSnippet.ifAdminMenuAvailable dropdown" uib-dropdown>
