Issue #13 Added functionality to save an Engine API.

--- a/system-ui/src/main/webapp/engine-apis.html
+++ b/system-ui/src/main/webapp/engine-apis.html
@@ -4,6 +4,7 @@
         <script src="/static/js/engine-apis.js"></script>
         <script class="lift:EngineAPISnippet.getEngineAPIList?callback=loadEngineAPIs"></script>
         <script class="lift:EngineAPISnippet.deleteEngineAPIs?callback=getEngineAPIList"></script>
+        <script class="lift:EngineAPISnippet.createEngineAPI?callback=engineAPICreated"></script>
     </head_merge>
     <section class="container">
         <section class="container" ng-controller="EngineAPIsController">
