Issue #13 Added functionality to display the config for the EngineAPI.

--- a/system-ui/src/main/webapp/engine-apis.html
+++ b/system-ui/src/main/webapp/engine-apis.html
@@ -5,6 +5,7 @@
         <script class="lift:EngineAPISnippet.getEngineAPIList?callback=loadEngineAPIs"></script>
         <script class="lift:EngineAPISnippet.deleteEngineAPIs?callback=getEngineAPIList"></script>
         <script class="lift:EngineAPISnippet.createEngineAPI?callback=engineAPICreated"></script>
+        <script class="lift:EngineAPISnippet.generateConfig?callback=showAgentConfig"></script>
     </head_merge>
     <section class="container">
         <section class="container" ng-controller="EngineAPIsController">
