Issue #14 Created the ability to create/delete an Engine.

--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -27,6 +27,7 @@
                                 <ul class="dropdown-menu" uib-dropdown-menu>
                                     <li><a href="/agents">Agents</a></li>
                                     <li><a href="/engine-apis">Engine API</a></li>
+                                    <li><a href="/engines">Engine</a></li>
                                 </ul>
                             </li>
                             <li class="lift:userSnippet.ifAdminMenuAvailable dropdown" uib-dropdown>
