Issue #18 Users can now download their Engine configuration.

--- a/system-ui/src/main/webapp/engines.html
+++ b/system-ui/src/main/webapp/engines.html
@@ -5,6 +5,7 @@
         <script class="lift:EngineSnippet.getEngineList?callback=loadEngines"></script>
         <script class="lift:EngineSnippet.createEngine?callback=engineCreated"></script>
         <script class="lift:EngineSnippet.deleteEngines?callback=getEngineList"></script>
+        <script class="lift:EngineSnippet.generateConfig?callback=showEngineConfig"></script>
     </head_merge>
     <section class="container">
         <section class="container" ng-controller="EnginesController">
