--- a/system-ui/src/main/webapp/templates-hidden/body.html
+++ b/system-ui/src/main/webapp/templates-hidden/body.html
@@ -39,7 +39,7 @@
                             <li class="dropdown" uib-dropdown>
                                 <a href="#" class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="lift:UserSnippet.loggedInUser"><span id="name"></span></span> <span class="caret"></span></a>
                                 <ul class="dropdown-menu" uib-dropdown-menu>
-                                    <li><a href="/profile">Profile</a></li>
+                                    <li><a href="/profiles">Profile</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="/logout">Logout</a></li>
                                 </ul>
